# xchk_regex_strategies

./: boot_django.py  load_tests.py  pyproject.toml  setup.cfg  setup.py
xchk_regex_strategies/: apps.py  strats.py  tests.py
xchk_regex_strategies.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
