[tool.poetry]
name = "xchk-regex-strategies"
version = "0.1.2"
description = "Checking strategies for xchk based around regular expressions."
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
xchk-core = {url = "http://github.com/v-nys/xchk_core/tarball/master"}
regex = "^2020.7.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
