[tool.poetry]
name = "xchk-regex-strategies"
version = "0.1.4"
description = "Checking strategies for xchk based around regular expressions."
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
regex = "^2020.7.14"

[tool.poetry.dev-dependencies]
xchk-core = {url = "http://github.com/v-nys/xchk_core/tarball/develop"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
